lettuce: rootdir: Restart cameraserver after boot completed
This is a workaround to fix the issue that sometimes media server
is not available, leading to no camera after boot.

W CameraService_proxy: Could not notify mediaserver, camera
service not available.

Restart the cameraserver to get a working camera.

Change-Id: If3ba1dce6e8ee2ee54f23fd5f99393d309692ede

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -405,6 +405,7 @@ service devstart_sh /system/vendor/bin/init.qcom.devstart.sh
     oneshot
 
 on property:sys.boot_completed=1
+    restart cameraserver
 
     # Enable ZRAM on boot_complete
     swapon_all /vendor/etc/fstab.qcom
